// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> should pause 1`] = `
.emotion-10 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus {
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true] {
  color: #808080;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-7 {
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: #191919;
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #0074f5;
}

.emotion-6 {
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    className="emotion-10"
  >
    <div>
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        Timelime
      </button>
    </div>
    <div
      className="emotion-8"
    >
      <button
        aria-label="Previous Second"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          data-file-name="seek.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Pause"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="pause.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Next Second"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="seek.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-5"
        >
          00:00:06
        </div>
        <div
          className="emotion-6"
        >
          / 
          00:00:18
        </div>
      </div>
    </div>
    <div>
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        CC
      </button>
    </div>
  </div>
  <div />
</div>
`;

exports[`<Timeline /> should play 1`] = `
.emotion-10 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover,
.emotion-0.focus-visible:focus {
  color: #ffffff;
}

.emotion-0:hover svg,
.emotion-0.focus-visible:focus svg {
  opacity: 1;
}

.emotion-0[aria-disabled=true] {
  color: #808080;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-7 {
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: #191919;
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #0074f5;
}

.emotion-6 {
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    className="emotion-10"
  >
    <div>
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        Timelime
      </button>
    </div>
    <div
      className="emotion-8"
    >
      <button
        aria-label="Previous Second"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          data-file-name="seek.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Play"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="play.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Next Second"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="seek.svg"
          height={20}
        />
      </button>
      <div
        className="emotion-7"
      >
        <div
          className="emotion-5"
        >
          00:00:00
        </div>
        <div
          className="emotion-6"
        >
          / 
          00:00:18
        </div>
      </div>
    </div>
    <div>
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        CC
      </button>
    </div>
  </div>
  <div />
</div>
`;
